@@ -11,7 +11,7 @@
         name="plone_lock_operations"
         class=".browser.locking.LockingOperations"
         permission="cmf.ModifyPortalContent"
-        allowed_attributes="safe_unlock force_unlock refresh_lock"
+        allowed_attributes="create_lock safe_unlock force_unlock refresh_lock"
         />
 
     <browser:page
